some Network expansion

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -148,15 +148,20 @@ Nodes: Throughout [June](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 - onchain vol uptick https://twitter.com/_Checkmatey_/status/1269825167133306881
 - https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182 { highlights pls }
-- https://blockcommons.red/post/dcr-on-chain-1/ highlights:
-  - 465K of the 840K [founders premine](https://docs.decred.org/advanced/premine/#bring-up-costs) remains untouched
-  - 290K of the 840K [airdrop](https://docs.decred.org/advanced/premine/#airdrop) coins did not move as well
-  - ~27% of the 345K DCR paid by the Treasury to contractors was not touched since the contractor received it, ~24% was staked, ~24% ended up in a known exchange address, ~1.7% was mixed
-  - out of ~5.8M DCR PoW rewards, 60% ended up on addresses associated with exchanges, 10% has been staked
+
+@richardred published [part 1](https://blockcommons.red/post/dcr-on-chain-1/) in a series about analysing Decred's blockchain data, highlights including:
+
+- 465K of the 840K [founders premine](https://docs.decred.org/advanced/premine/#bring-up-costs) remains untouched
+- 290K of the 840K [airdrop](https://docs.decred.org/advanced/premine/#airdrop) coins did not move as well
+- ~27% of the 345K DCR paid by the Treasury to contractors was not touched since the contractor received it, ~24% was staked, ~24% ended up in a known exchange address, ~1.7% was mixed
+- out of ~5.8M DCR PoW rewards, 60% ended up on addresses associated with exchanges, 10% has been staked, and the rest is unspent (6%) or has unknown outcome (24%). 
+
+The same kind of analysis was repeated with fresh data and formatting improvements for [Issue 27](https://ournetwork.substack.com/p/our-network-issue-27) of Our Network.
+
 - https://twitter.com/PermabullNino/status/1278055245050855424
 - https://twitter.com/PermabullNino/status/1272510826210000896
   - ticket pool inflows/outflows, Strong Hand ratio, staking momentum
-- https://ournetwork.substack.com/p/our-network-issue-27
+- 
 
 ## Integrations
 
