add reddit descriptions

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -167,7 +167,7 @@ The same kind of analysis was repeated with fresh data and formatting improvemen
 
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
 
-- Hotbit investment product https://twitter.com/Hotbit_news/status/1270663744536928262 { any detail on how it works welcome }
+- Hotbit [announced](https://medium.com/@hotbit/hotbits-announcement-regarding-the-launch-of-dcr-investment-product-and-current-deposit-221400da20dd) a Decred investment product on Jun 11, with an annualized return of 4.27% and "redemption period being (T+30)". There is a minimum purchase of 100 DCR and it seems like the "minimum unit for the calculation of interests of current deposit investment plan will be 1DCR", whatever that means. There is a link for further details, which might have also clarified another puzzling mention of a 0.24% rate, but the link is dead.
 
 - https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/
 
@@ -290,11 +290,12 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/
-- https://www.reddit.com/r/decred/comments/hbp6y4/forward_thinking_friday_1_moving_the_peg_forwards/
-- https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/
-- https://www.reddit.com/r/decred/comments/hd4mwv/decred_skepticism_sunday_21_june_2020/
-- https://www.reddit.com/r/decred/comments/hh7lo2/decred_skepticism_sunday_28_june_2020/
+Some of the most active posts this month were part of @checkmate's new Forward Thinking Friday and Skepticism Sunday initiatives
+
+- Forward Thinking Friday [1](https://www.reddit.com/r/decred/comments/hbp6y4/forward_thinking_friday_1_moving_the_peg_forwards/) (moving the peg forward) and [2](https://www.reddit.com/r/decred/comments/hg2a9k/forward_thinking_friday_decred_narratives_26_june/) (Decred Narratives)
+- Skepticism Sunday [1](https://www.reddit.com/r/decred/comments/hd4mwv/decred_skepticism_sunday_21_june_2020/) and [2](https://www.reddit.com/r/decred/comments/hh7lo2/decred_skepticism_sunday_28_june_2020/)
+- The most discussed [post](https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/) of the month (and for some time) also came from @checkmate, summarizing a number of grassroots marketing initiatives for discussion and to recruit participants.
+- @g687 [posted](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/) analysis of how many times the names of different project are mentioned by comments in a variety of subreddits, remarking that Decred was mentioned relatively little on subreddits other than /r/decred. This provoked 32 comments in response, including a high scoring [one](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/fw4u90p) from @jy-p which set out some possible reasons for a lack of mentions. It was also pointed out that the other projects included in the comparison had much larger market caps.
 
 Selected Twitter discussions:
 
