--- a/journal/202006.md
+++ b/journal/202006.md
@@ -169,7 +169,7 @@ The same kind of analysis was repeated with fresh data and formatting improvemen
 
 - Hotbit [announced](https://medium.com/@hotbit/hotbits-announcement-regarding-the-launch-of-dcr-investment-product-and-current-deposit-221400da20dd) a Decred investment product on Jun 11, with an annualized return of 4.27% and "redemption period being (T+30)". There is a minimum purchase of 100 DCR and it seems like the "minimum unit for the calculation of interests of current deposit investment plan will be 1DCR", whatever that means. There is a link for further details, which might have also clarified another puzzling mention of a 0.24% rate, but the link is dead.
 
-- https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/
+- DecredVoting VSP [announced](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/) a new tickets analytics dashboard which shows the VSPs users stats about their tickets, including some specific to split tickets devised by @decreddave himself which are not available elsewhere. 
 
 { check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
 
@@ -238,10 +238,11 @@ Upcoming:
 
 Selected articles:
 
-- https://blog.decred.org/2020/06/08/Decred-blockchain-analysis-Part-1/ https://blockcommons.red/post/dcr-on-chain-1/ { mention in intro? }
-- https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182
-- https://medium.com/@Ammarooni/why-we-need-decred-an-inclusive-approach-to-sound-money-db2f990c107b
-- https://medium.com/@artikozel/the-decred-node-or-how-i-learned-to-stop-worrying-and-love-the-command-line-part-one-1eca9420a1b2
+- Decred blockchain analysis part 1 by @richardred ([blog.decred.org](https://blog.decred.org/2020/06/08/Decred-blockchain-analysis-Part-1/))
+- Decred On-chain: Realised Cap, MVRV Ratio and Gradient Oscillators by @checkmate ([medium](https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182))
+- Why we need Decred: An inclusive approach to sound money by @ammarooni ([medium](https://medium.com/@Ammarooni/why-we-need-decred-an-inclusive-approach-to-sound-money-db2f990c107b))
+- The Decred Node or: How I Learned to Stop Worrying and Love the Command Line — Part One ([medium](https://medium.com/@artikozel/the-decred-node-or-how-i-learned-to-stop-worrying-and-love-the-command-line-part-one-1eca9420a1b2))
+- 
 - https://es.cointelegraph.com/news/elian-huesca-btc-eth-and-decred-are-part-of-the-greatest-technological-and-economic-revolution-of-our-generation (in Spanish) { @elian how does the title translate and what is it about? }
 
 Translations:
@@ -251,10 +252,10 @@ Translations:
 Videos:
 
 - https://twitter.com/OfficialCryptos/status/1268526574841876481
-- https://twitter.com/Bitcoin/status/1269313539056922624 went quite viral with 41K views, ~900 likes and ~300 retweets.
-- stakey awakens https://www.youtube.com/watch?v=LHgGyoDcFPI
-- Decred bi-Weekly News Update - June 10th, 2020 https://www.youtube.com/watch?v=INKSkBpCT_0
-- Decred bi-Weekly News Update - June 23rd, 2020 https://www.youtube.com/watch?v=4GqdgsgUX7c
+- The @Bitcoin twitter account tweeted a video featuring quotes about the Federal Reserve's capacity infinite capacity to print money with memetic embellishments from @Exitus, including a cheeky mention of Decentralized Credits at the end. The tweet was well received, with 41K views, ~900 likes and ~300 retweets. ([twitter](https://twitter.com/Bitcoin/status/1269313539056922624))
+- Stakey Awakens ([youtube](https://www.youtube.com/watch?v=LHgGyoDcFPI))
+- Decred bi-Weekly News Update - June 10th, 2020 ([youtube](https://www.youtube.com/watch?v=INKSkBpCT_0))
+- Decred bi-Weekly News Update - June 23rd, 2020 ([youtube](https://www.youtube.com/watch?v=4GqdgsgUX7c))
 - Decred was mentioned in the Good Morning Crypto show by Ivan on Tech ([youtube](https://www.youtube.com/watch?v=JZhl2Atm4VI&t=42m50s), at 42:50). The video has 24K views. Thanks to Steve de boo for dropping the question in the livestream chat - a good example of high-precision outreach work! { move this comment to Outreach? }
 - { check Decred Society channel }
 - Decred Australia Virtual Meetup #2 Feat. On-Chain Analyst Checkmate https://www.youtube.com/watch?v=HbquQIv9EYw
@@ -265,9 +266,9 @@ Decred videos are now also posted [on BitChute](https://www.bitchute.com/channel
 
 Audio:
 
-- https://decredindepth.libsyn.com/akin-checkmate-mr-bulb-dcr-use-case-growth
-- https://roughconsensus.libsyn.com/episode-7-the-rigged-game
-- https://roughconsensus.libsyn.com/episode-8-talking-macro-with-ammar
+- Decred in Depth episode with @checkmate, @akin and @mrbulb on DCR use cases and growth ([libsyn](https://decredindepth.libsyn.com/akin-checkmate-mr-bulb-dcr-use-case-growth))
+- Rough Consensus episode 7 - The Rigged Game ([libsyn](https://roughconsensus.libsyn.com/episode-7-the-rigged-game))
+- Rough Consensus episode 8 - Talking Macro with Ammar ([libsyn](https://roughconsensus.libsyn.com/episode-8-talking-macro-with-ammar))
 - Zach Segal (Head of Listings at Coinbase) mentioned Decred as an interesting project in Trading Places podcast ([spotify](https://open.spotify.com/episode/7BkEEDgSDPU1XQsmveksgv), short [clip](https://www.youtube.com/watch?v=IDGQsWE3eeg), _missed in May_)
 
 @AGNFAB [announced](https://twitter.com/AGNFAB1/status/1271157067097792514) that some of his artwork will be exclusively available on [decentralizedboutique.com](https://decentralizedboutique.com/?product_cat=art), a new store selling crypto related jewelry and artwork [for crypto](https://decentralizedboutique.com/?page_id=150) (including DCR).
@@ -319,7 +320,15 @@ In June DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily
 
 {governance, funding, chain forks, community forks}
 
-Zcash expenses Q4 2019 https://twitter.com/coveryfire7777/status/1276575095809617922
+There has been some controversy about a [bug](https://medium.com/blockstream/patching-the-liquid-timelock-issue-b4b2f5f9a973) with Blockstream's Liquid service whereby the "emergency backup keys" held by Blockstream were repeatedly taking custody of funds in a way that should only have happened in an emergency. The controversey is largely around how the disclosure of the bug has been handled, with James Prestwich (who discovered it) not [impressed](https://twitter.com/_prestwich/status/1277090512126660608) by the way its severity has been downplayed by Blockstream. This [comment](https://www.reddit.com/r/CryptoCurrency/comments/hhwwcb/vulnerability_discovered_in_liquid_allowing/fwdqbxc) on /r/cryptocurrency has a good timeline, including an observation that the story was not being covered on /r/bitcoin.
+
+Reddit have opened a [call](https://np.reddit.com/r/ethereum/comments/hbjx25/the_great_reddit_scaling_bakeoff/) for ideas about how they might scale the recently launched points system (currently running on Ethereum's Rinkeby testnet) to the whole platform.
+
+The cost of transactions on Ethereum has [increased by 500%](https://www.coindesk.com/ethereum-developers-consider-new-fee-model-as-gas-costs-climb) since April and developers are looking at ways to bring this down, including an EIP (1559) which would see users pay a "base fee" to the network plus a tip to miners when making transactions.
+
+One Ethereum user has been paying [particularly](https://www.coindesk.com/whale-sent-130-ether-transaction-fee) high fees this month, with two separate transactions each paying $2.6 million worth of ETH as a transaction fee to miners, for a transfer of a small amount of ETH (~$100). Speculation about the cause of the high fees included mistakes and [blackmail](https://twitter.com/VitalikButerin/status/1271463564440678401?s=20) attempts. 
+
+Zcash expenses Q4 2019 https://twitter.com/coveryfire7777/status/1276575095809617922 {rr: I think we covered their expenses and transparency report once before, hard to know where to draw the line on these as there are now quite a few projects which produce them and ZEC are doing one per quarter... imo the first one is more noteworthy, then subsequent reports tend to report slightly more or less of whatever was in the first report}
 
 { USDT surpassed $10B }
 
@@ -331,11 +340,11 @@ Zcash expenses Q4 2019 https://twitter.com/coveryfire7777/status/127657509580961
 
 [CoinGecko](https://www.coingecko.com/) partnered with Hacken to add [cybersecurity](https://cointelegraph.com/news/coingecko-adds-crypto-exchanges-cybersecurity-ratings-to-trust-score) ratings for exchanges listed on the site (see Trust Score tab).
 
-{ GitHub master branch drama: apparently some people have ran out of important problems to solve and went on to inject their social agenda into established technical terminology https://www.reddit.com/r/programming/comments/h8w36t/github_will_no_longer_use_the_term_master_as/ }
+{ GitHub master branch drama: apparently some people have ran out of important problems to solve and went on to inject their social agenda into established technical terminology https://www.reddit.com/r/programming/comments/h8w36t/github_will_no_longer_use_the_term_master_as/ rr: don't see this as relevant}
 
 {other: regulations, privacy, security, fun}
 
-Chainalysis [announced](https://cointelegraph.com/news/chainalysis-can-now-track-your-privacy-coins-zcash-dash) the support of Zcash and Dash privacy coins in their products. Vast majority of transactions in these networks can be traced because privacy features are used by very few people. This comes after the May's news of several exchanges [delisting](https://cointelegraph.com/news/another-exchange-delists-monero-amidst-ongoing-sex-scandal) Monero because it is better at protecting users' privacy, and researchers from Carnegie Mellon University claiming they can trace 99%+ Zcash and 30% Monero transactions.
+Chainalysis [announced](https://cointelegraph.com/news/chainalysis-can-now-track-your-privacy-coins-zcash-dash) the support of Zcash and Dash privacy coins in their products. Vast majority of transactions in these networks can be traced because privacy features are used by very few people. This comes after the May's news of several exchanges [delisting](https://cointelegraph.com/news/another-exchange-delists-monero-amidst-ongoing-sex-scandal) Monero because it is better at protecting users' privacy, and researchers from Carnegie Mellon University claiming they can trace 99%+ Zcash and 30% Monero transactions{need a source for the last bit}.
 
 ## Submit Your Story for Next DJ
 
