--- a/journal/202006.md
+++ b/journal/202006.md
@@ -326,7 +326,7 @@ Reddit have opened a [call](https://np.reddit.com/r/ethereum/comments/hbjx25/the
 
 The cost of transactions on Ethereum has [increased by 500%](https://www.coindesk.com/ethereum-developers-consider-new-fee-model-as-gas-costs-climb) since April and developers are looking at ways to bring this down, including an EIP (1559) which would see users pay a "base fee" to the network plus a tip to miners when making transactions.
 
-One Ethereum user has been paying [particularly](https://www.coindesk.com/whale-sent-130-ether-transaction-fee) high fees this month, with two separate transactions each paying $2.6 million worth of ETH as a transaction fee to miners, for a transfer of a small amount of ETH (~$100). Speculation about the cause of the high fees included mistakes and [blackmail](https://twitter.com/VitalikButerin/status/1271463564440678401?s=20) attempts. 
+One Ethereum user has been paying [particularly](https://www.coindesk.com/whale-sent-130-ether-transaction-fee) high fees this month, with two separate transactions each paying $2.6 million worth of ETH as a transaction fee to miners, for a transfer of a small amount of ETH (~$100). Speculation about the cause of the high fees included mistakes and [blackmail](https://twitter.com/VitalikButerin/status/1271463564440678401?s=20) attempts. Adding to the mystery, the pool which mined one of the transactions appeared to [offer](https://twitter.com/sparkpool_eth/status/1270688700968480768) to return some of the fee, but nobody came forward. 
 
 Zcash expenses Q4 2019 https://twitter.com/coveryfire7777/status/1276575095809617922 {rr: I think we covered their expenses and transparency report once before, hard to know where to draw the line on these as there are now quite a few projects which produce them and ZEC are doing one per quarter... imo the first one is more noteworthy, then subsequent reports tend to report slightly more or less of whatever was in the first report}
 
@@ -334,7 +334,9 @@ Zcash expenses Q4 2019 https://twitter.com/coveryfire7777/status/127657509580961
 
 {DEX}
 
-- Bancor "smart contracts" https://cointelegraph.com/news/bancors-bug-exposes-dangerously-common-practice-in-ethereum-defi { pretty horrifying practice that again shows that very rich smart contracts is playing with fire, but is it relevant enough for Decred/DEX enough? }
+A [bug](https://cointelegraph.com/news/bancors-bug-exposes-dangerously-common-practice-in-ethereum-defi) with the Bancor smart contracts was detected which would have allowed attackers to drain the funds of anyone who interacted with it, so "Bancor acted preemptively to 'steal' user funds before malicious parties could intervene". The severity of the problem was compounded by the use of "infinite approvals", which save on transaction fees and offer a better UX, but expose users to much more risk (in this case the potential attacker could get all of the depositor's tokens, not just the amount they chose to deposit). Use of infinite approvals is common to many DeFi apps.
+
+- Bancor "smart contracts" https://cointelegraph.com/news/bancors-bug-exposes-dangerously-common-practice-in-ethereum-defi { pretty horrifying practice that again shows that very rich smart contracts is playing with fire, but is it relevant enough for Decred/DEX enough? rr: I think this is totally relevant, DeFi complexity and the messes it causes are relevant to Decred because there are people who want to do it with DCR!}
 
 {relevant exchanges and websites}
 
