--- a/journal/202006.md
+++ b/journal/202006.md
@@ -68,7 +68,10 @@ Dev activity stats for June ({approximate?}): {n} active PRs, {n} master commits
 
 ## People
 
-Welcome to new first time contributors with code merged to master: {list people who made meaningful commits merged in master branches, in alphabetical order, format as: @handle ([repo](link to user's commits))}
+Welcome to new first time contributors with code merged to master: @song50119 ([dcrdex](https://github.com/decred/dcrdex/commits?author=song50119)), @kevinstl ([dcrdex](https://github.com/decred/dcrdex/commits?author=kevinstl)), @svitekpavel  ([dcrdocs](https://github.com/decred/dcrdocs/commits?author=svitekpavel)),  @Daniel-Leedan ([dcrdocs](https://github.com/decred/dcrdocs/commits?author=Daniel-Leedan)),  @shjackson ([dcrdocs](https://github.com/decred/dcrdocs/commits?author=shjackson))
+
+
+{list people who made meaningful commits merged in master branches, in alphabetical order, format as: @handle ([repo](link to user's commits))}
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
 
