--- a/journal/202006.md
+++ b/journal/202006.md
@@ -4,17 +4,27 @@
 
 _Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
 
-{introduction, major news of the month ordered by impact, don't put any links here}
+June's highlights:
 
-- mobile apps v1.5 release
+- { mobile apps v1.5 release }
+- { chain analysis insights by rr }
+- { uptick in grassroot marketing discussion and artwork }
 
 ## Development
 
-{ hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
-
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
-[dcrd](https://github.com/decred/dcrd): {}
+[dcrd](https://github.com/decred/dcrd):
+
+- extracted [interfaces](https://github.com/decred/dcrd/pull/2211) in `rpcserver` to allow mocking and added tests for some of its handlers
+- fixed [mempool](https://github.com/decred/dcrd/pull/2232) view construction when dealing with disapproved blocks { what did the bug cause in practice? }
+- fixed crashes on RPC server edge cases with crafted JSON ([one](https://github.com/decred/dcrd/pull/2218), [another](https://github.com/decred/dcrd/pull/2221))
+- [removed](https://github.com/decred/dcrd/pull/2222) Encrypt and Decrypt functions to discourage their use and instead recommend to use modern encryption scheme (e.g. [AEAD ciphers](https://crypto.stackexchange.com/a/27248))
+
+In progress:
+
+- [asynchronous](https://github.com/decred/dcrd/pull/2219) indexing
+- { anything to say about decentralize treasury WIP? https://github.com/decred/dcrd/pull/2170 }
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
