--- a/journal/202006.md
+++ b/journal/202006.md
@@ -26,7 +26,12 @@ In progress:
 - [asynchronous](https://github.com/decred/dcrd/pull/2219) indexing
 - { anything to say about decentralize treasury WIP? https://github.com/decred/dcrd/pull/2170 }
 
-[dcrwallet](https://github.com/decred/dcrwallet): {}
+[dcrwallet](https://github.com/decred/dcrwallet):
+
+- added [methods](https://github.com/decred/dcrwallet/pull/1705) to fetch filters and blocks unrelated to wallet data, which is useful for external callers such as dcrlnd { @matheusd anything to add? }
+- avoid [uncommon](https://github.com/decred/dcrwallet/pull/1751) CoinJoin amounts { how to explain this in a simple way? }
+- [cap](https://github.com/decred/dcrwallet/pull/1759) the amount of outputs produced by downmixing
+- bug fixes
 
 [dcrctl](https://github.com/decred/dcrctl): {}
 
