--- a/journal/202006.md
+++ b/journal/202006.md
@@ -33,9 +33,20 @@ In progress:
 - [cap](https://github.com/decred/dcrwallet/pull/1759) the amount of outputs produced by downmixing
 - bug fixes
 
-[dcrctl](https://github.com/decred/dcrctl): {}
+[Decrediton](https://github.com/decred/decrediton):
 
-[Decrediton](https://github.com/decred/decrediton): {}
+- next part of [CSPP integration](https://github.com/decred/decrediton/pull/2475) implementing safety restrictions for mixed accounts
+- unified the [processing](https://github.com/decred/decrediton/pull/2468) of regular and stake transactions { how to explain it better? }
+- allow [multiple](https://github.com/decred/decrediton/pull/2491) outstanding LN payments { anything to add? }
+- new component for [eligible](https://github.com/decred/decrediton/pull/2510) tickets
+- a view showing configured [VSPs](https://github.com/decred/decrediton/pull/2482)
+- more code [converted](https://github.com/decred/decrediton/pull/2537) to use functional components and CSS modules
+- reused more components from pi-ui
+- UI tweaks and bug fixes
+
+In progress:
+
+- PoC [integration](https://github.com/decred/decrediton/pull/2516) of the new vspd
 
 [Politeia](https://github.com/decred/politeia): {}
 
@@ -80,6 +91,13 @@ Other:
 - https://macelai.github.io/decred-split-stakepools/ https://www.reddit.com/r/decred/comments/hc49ew/page_for_all_split_ticket_pools/ 
 
 Dev activity stats for June ({approximate?}): {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
+
+{ exclude:
+
+- +12K -12K of trezor json updated in https://github.com/decred/decrediton/pull/2468
+- +24K -19K of regenerated protobuf code in https://github.com/decred/decrediton/pull/2491
+
+}
 
 ## People
 
