Dev politeia, politeiagui

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -48,7 +48,23 @@ In progress:
 
 - PoC [integration](https://github.com/decred/decrediton/pull/2516) of the new vspd
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia):
+
+- better [caching](https://github.com/decred/politeia/pull/1226) of vote results
+- [lazy loading](https://github.com/decred/politeia/pull/1219) of comment votes to benefit from the fact that old proposals are rarely accessed
+- increased [test coverage](https://github.com/decred/politeia/pull/1203) of the new RFP code
+- permanent [logout](https://github.com/decred/politeiagui/pull/1903) feature that deletes user identity and drafts from the browser, this change also removes the use of email as storage key to have less personal data in browser's local storage
+- allow [short URLs](https://github.com/decred/politeiagui/pull/1962) on the UI
+- improved [diff viewer](https://github.com/decred/politeiagui/pull/1988) for proposal versions
+- [prevent](https://github.com/decred/politeiagui/pull/1966) comments and proposal submission when anchoring
+- CMS: viewer for past [versions](https://github.com/decred/politeiagui/pull/1980) of an invoice
+- CMS: passthrough requests for [proposal data](https://github.com/decred/politeia/pull/1171) to avoid cross-site requests that cause security issues
+- lots of backend and UI bug fixes
+
+In progress:
+
+- TOTP 2FA support
+- ability for CMS admins to review [spending](https://github.com/decred/politeia/pull/1224) of approved proposals
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
