Credits update, fix PR link

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -64,7 +64,7 @@ In progress:
 In progress:
 
 - TOTP 2FA support
-- ability for CMS admins to review [spending](https://github.com/decred/politeia/pull/1224) of approved proposals
+- ability for CMS admins to review [spending](https://github.com/decred/politeiagui/pull/2032) of approved proposals
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
@@ -413,6 +413,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, l1ndseymm, richardred
+- writing and editing: bee, degeri, l1ndseymm, richardred
 - reviews and feedback: {}
 - title image: {}
