--- a/journal/202006.md
+++ b/journal/202006.md
@@ -53,7 +53,7 @@ In progress:
 - better [caching](https://github.com/decred/politeia/pull/1226) of vote results
 - [lazy loading](https://github.com/decred/politeia/pull/1219) of comment votes to benefit from the fact that old proposals are rarely accessed
 - increased [test coverage](https://github.com/decred/politeia/pull/1203) of the new RFP code
-- permanent [logout](https://github.com/decred/politeiagui/pull/1903) feature that deletes user identity and drafts from the browser, this change also removes the use of email as storage key to have less personal data in browser's local storage
+- permanent [logout](https://github.com/decred/politeiagui/pull/1903) feature that deletes user identity and drafts from the browser, this change also removes the use of email as a storage key to have less personal data in browser's local storage
 - allow [short URLs](https://github.com/decred/politeiagui/pull/1962) on the UI
 - improved [diff viewer](https://github.com/decred/politeiagui/pull/1988) for proposal versions
 - [prevent](https://github.com/decred/politeiagui/pull/1966) comments and proposal submission when anchoring
@@ -78,13 +78,13 @@ In progress:
 
 [dcrdex](https://github.com/decred/dcrdex):
 
-Addressing concerns about project timeline, @chappjc noted:
+Addressing concerns about the project timeline, @chappjc noted:
 
 > Mainnet beta will be this summer. Dev plan is to do that by end of Q2 2020, and we are. Also, the client browser interface was barely hinted at in the dev proposal and we dramatically expanded the scope of the project to make it happen and look good.
 > 
 > LTC and generic BTC-clone support wasn't part of the prop, but we got that done too.
 > 
-> We also conceived a new epoch matching algorithm based on cryptographic commitments from the clients, the preimages for which are revealed at epoch close, and completely reimplemented it half way through the project. Not easy or quick, but it's done too and it's a big improvement over the original spec. ([2020-06-01](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15910318461825cyXfI:decred.org))
+> We also conceived a new epoch matching algorithm based on cryptographic commitments from the clients, the preimages for which are revealed at epoch close, and completely reimplemented it halfway through the project. Not easy or quick, but it's done too and it's a big improvement over the original spec. ([2020-06-01](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15910318461825cyXfI:decred.org))
 
 [dcrandroid](https://github.com/decred/dcrandroid):
 
@@ -145,7 +145,7 @@ Community stats as of Jul 2:
 
 In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 12,629 DCR and spent 8,340 DCR. Using June's daily average DCR/USD rate of $16.05, this is $203K received and $134K spent. At May's average daily rate of $14.11, the USD figure billed for work completed in that month is $118K. As of Jul 1, Treasury balance is 633,820 DCR (9.08 million USD at $14.32).
 
-Six proposals were voted on in June, with 4 approved and 2 rejected, with relatively high turnout for these proposals as compared to some recent proposals that . The proposals to be approved were:
+Six proposals were voted on in June, with 4 approved and 2 rejected, with relatively high turnout for these proposals as compared to some recent proposals that. The proposals to be approved were:
 
 * Decred OnChain - A Research and Charting Resource - 86% approval (38% turnout)
 * Decred Latam Marketing and Events Proposal 2 - 61% approval (41% turnout)
@@ -300,7 +300,7 @@ Translations:
 Videos:
 
 - https://twitter.com/OfficialCryptos/status/1268526574841876481
-- The @Bitcoin twitter account tweeted a video featuring quotes about the Federal Reserve's capacity infinite capacity to print money with memetic embellishments from @Exitus, including a cheeky mention of Decentralized Credits at the end. The tweet was well received, with 41K views, ~900 likes and ~300 retweets. ([twitter](https://twitter.com/Bitcoin/status/1269313539056922624))
+- The @Bitcoin twitter account tweeted a video featuring quotes about the Federal Reserve's capacity infinite capacity to print money with memetic embellishments from @Exitus, including a cheeky mention of Decentralized Credits at the end. The tweet was well received, with 41K views, ~900 likes, and ~300 retweets. ([twitter](https://twitter.com/Bitcoin/status/1269313539056922624))
 - Stakey Awakens ([youtube](https://www.youtube.com/watch?v=LHgGyoDcFPI))
 - Decred bi-Weekly News Update - June 10th, 2020 ([youtube](https://www.youtube.com/watch?v=INKSkBpCT_0))
 - Decred bi-Weekly News Update - June 23rd, 2020 ([youtube](https://www.youtube.com/watch?v=4GqdgsgUX7c))
@@ -332,7 +332,7 @@ Audio:
 
 Comm systems news:
 
-- Decred's Discord server has been restructured and channels have been grouped into 3 categories: Discord-only channels for a more casual experience compared to Matrix (where many rooms are used as virtual offices to coordinate work), read-only channels bridged to Matrix (as a balance between transparency and productivity in Matrix rooms), and fully bridged rooms #decred-101, #proposals, #support, #ticket-splitting and #trading. { @Exitus anything to add? }
+- Decred's Discord server has been restructured and channels have been grouped into 3 categories: Discord-only channels for a more casual experience compared to Matrix (where many rooms are used as virtual offices to coordinate work), read-only channels bridged to Matrix (as a balance between transparency and productivity in Matrix rooms), and fully bridged rooms #decred-101, #proposals, #support, #ticket-splitting, and #trading. { @Exitus anything to add? }
 - { new Telegram support channel https://t.me/DecredSupport bridged to Matrix #support }
 
 {selected discussed topics, as bullet list or one paragraph per topic}
@@ -344,7 +344,7 @@ Some of the most active posts this month were part of @checkmate's new Forward T
 - Forward Thinking Friday [1](https://www.reddit.com/r/decred/comments/hbp6y4/forward_thinking_friday_1_moving_the_peg_forwards/) (moving the peg forward) and [2](https://www.reddit.com/r/decred/comments/hg2a9k/forward_thinking_friday_decred_narratives_26_june/) (Decred Narratives)
 - Skepticism Sunday [1](https://www.reddit.com/r/decred/comments/hd4mwv/decred_skepticism_sunday_21_june_2020/) and [2](https://www.reddit.com/r/decred/comments/hh7lo2/decred_skepticism_sunday_28_june_2020/)
 - The most discussed [post](https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/) of the month (and for some time) also came from @checkmate, summarizing a number of grassroots marketing initiatives for discussion and to recruit participants.
-- @g687 [posted](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/) analysis of how many times the names of different project are mentioned by comments in a variety of subreddits, remarking that Decred was mentioned relatively little on subreddits other than /r/decred. This provoked 32 comments in response, including a high scoring [one](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/fw4u90p) from @jy-p which set out some possible reasons for a lack of mentions. It was also pointed out that the other projects included in the comparison had much larger market caps.
+- @g687 [posted](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/) analysis of how many times the names of a different project are mentioned by comments in a variety of subreddits, remarking that Decred was mentioned relatively little on subreddits other than /r/decred. This provoked 32 comments in response, including a high scoring [one](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/fw4u90p) from @jy-p which set out some possible reasons for a lack of mentions. It was also pointed out that the other projects included in the comparison had much larger market caps.
 
 Selected Twitter discussions:
 
@@ -394,7 +394,7 @@ A [bug](https://cointelegraph.com/news/bancors-bug-exposes-dangerously-common-pr
 
 {other: regulations, privacy, security, fun}
 
-Chainalysis [announced](https://cointelegraph.com/news/chainalysis-can-now-track-your-privacy-coins-zcash-dash) the support of Zcash and Dash privacy coins in their products. Vast majority of transactions in these networks can be traced because privacy features are used by very few people. This comes after the May's news of several exchanges [delisting](https://cointelegraph.com/news/another-exchange-delists-monero-amidst-ongoing-sex-scandal) Monero because it is better at protecting users' privacy, and researchers from Carnegie Mellon University claiming they can trace 99%+ Zcash and 30% Monero transactions{need a source for the last bit}.
+Chainalysis [announced](https://cointelegraph.com/news/chainalysis-can-now-track-your-privacy-coins-zcash-dash) the support of Zcash and Dash privacy coins in their products. The vast majority of transactions in these networks can be traced because privacy features are used by very few people. This comes after the May's news of several exchanges [delisting](https://cointelegraph.com/news/another-exchange-delists-monero-amidst-ongoing-sex-scandal) Monero because it is better at protecting users' privacy, and researchers from Carnegie Mellon University claiming they can trace 99%+ Zcash and 30% Monero transactions{need a source for the last bit}.
 
 ## Submit Your Story for Next DJ
 
