Dev drop dcrstakepool, cover dcrpool

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -66,11 +66,10 @@ In progress:
 - TOTP 2FA support
 - ability for CMS admins to review [spending](https://github.com/decred/politeiagui/pull/2032) of approved proposals
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
-
 [dcrpool](https://github.com/decred/dcrpool):
 
-- v1.1.0 RC2 https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc2
+- v1.1.0 [RC2](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc2) and [RC3](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc3) released fixing a few bugs since RC1
+- bug fixes and housekeeping
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
 
