--- a/journal/202006.md
+++ b/journal/202006.md
@@ -66,6 +66,18 @@ In progress:
 - TOTP 2FA support
 - ability for CMS admins to review [spending](https://github.com/decred/politeiagui/pull/2032) of approved proposals
 
+[vspd](https://github.com/decred/vspd):
+
+- [tolerate](https://github.com/decred/vspd/pull/104) dcrwallet connection failures
+- reject [unvotable](https://github.com/decred/vspd/pull/93) tickets
+- initial [deployment](https://github.com/decred/vspd/pull/95) guide
+- [signing](https://github.com/decred/vspd/pull/109) of error responses
+- initial [admin page](https://github.com/decred/vspd/pull/119)
+- [refreshed](https://github.com/decred/vspd/pull/138) UI look
+- multiple changes to improve input validation, error handling, shutdown, etc
+
+{ anything to add like plans? }
+
 [dcrpool](https://github.com/decred/dcrpool):
 
 - v1.1.0 [RC2](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc2) and [RC3](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc3) released fixing a few bugs since RC1
