Dev dcrlnd, drop cspp

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -83,9 +83,9 @@ In progress:
 - v1.1.0 [RC2](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc2) and [RC3](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc3) released fixing a few bugs since RC1
 - bug fixes and housekeeping
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+[dcrlnd](https://github.com/decred/dcrlnd):
 
-[cspp](https://github.com/decred/cspp): {}
+- { anything notable? }
 
 [dcrdex](https://github.com/decred/dcrdex):
 
