--- a/journal/202006.md
+++ b/journal/202006.md
@@ -230,8 +230,8 @@ The same kind of analysis was repeated with fresh data and formatting improvemen
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
 
 - Hotbit [announced](https://medium.com/@hotbit/hotbits-announcement-regarding-the-launch-of-dcr-investment-product-and-current-deposit-221400da20dd) a Decred investment product on Jun 11, with an annualized return of 4.27% and "redemption period being (T+30)". There is a minimum purchase of 100 DCR and it seems like the "minimum unit for the calculation of interests of current deposit investment plan will be 1DCR", whatever that means. There is a link for further details, which might have also clarified another puzzling mention of a 0.24% rate, but the link is dead.
-
 - DecredVoting VSP [announced](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/) a new tickets analytics dashboard which shows the VSPs users stats about their tickets, including some specific to split tickets devised by @decreddave himself which are not available elsewhere. 
+- Following Kucoin's [launch](https://www.kucoin.com/news/en-decred-soft-staking-official-rules) of a custodial staking service in March 2020, @richardred has investigated staking activity associated with Kucoin-related addresses. Observations suggest that up until the end of Jun 2020 Kucoin has bought 213 tickets, and 185 of them have voted. The earliest tickets bought by addresses thought to be controlled by Kucoin were bought in December 2019, several months before the service was announced in Feb and customers were automatically opted in within 48 hours of that announcement. All of these tickets have abstained in the on chain agenda voting, and none of them have voted on Politeia proposals - Kucoin are not participating in decision-making with their tickets. According to reports user DCR balances appear to have earned ~0.45% additional DCR from this staking, considering about one quarter has passed this would put it on course for an annual rate of about ~1.8%, which is considerably lower than the rate which is projected for sovereign staking by dcrdata.
 
 { check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list } -None
 
