Dev dcrandroid, dcrios

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -10,6 +10,18 @@ June's highlights:
 - { chain analysis insights by rr }
 - { uptick in grassroot marketing discussion and artwork }
 
+## Mobile Wallets v1.5 Release
+
+After ~1 year of development, Android and iOS wallets v1.5 are now out on [Google Play](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [Apple Store](https://apps.apple.com/us/app/decred-wallet/id1462247643). Changes include:
+
+- Completely redesigned user interface that conforms to platform style guidelines.
+- Support for multiple wallets and watch-only wallets.
+- Delayed seed backup confirmation to get up and running quickly.
+
+Congratulations to all contributors!
+
+Please check the full Reddit [announcement](https://www.reddit.com/r/decred/comments/hc5jut/decred_mobile_wallet_v150_has_been_released_for/) and support the [tweet](https://twitter.com/planetdecred/status/1274041667520090112).
+
 ## Development
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
@@ -120,12 +132,16 @@ Addressing concerns about the project timeline, @chappjc noted:
 > 
 > We also conceived a new epoch matching algorithm based on cryptographic commitments from the clients, the preimages for which are revealed at epoch close, and completely reimplemented it halfway through the project. Not easy or quick, but it's done too and it's a big improvement over the original spec. ([2020-06-01](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15910318461825cyXfI:decred.org))
 
-[dcrandroid](https://github.com/decred/dcrandroid):
+[dcrandroid](https://github.com/planetdecred/dcrandroid):
 
-- https://twitter.com/planetdecred/status/1274041667520090112 { dedicated section? }
-- repo moved https://github.com/planetdecred/dcrandroid
+- repository moved to the planetdecred organization
+- implemented [Espresso](https://github.com/planetdecred/dcrandroid/pull/481) tests and migrated from Travis CI to GitHub Actions
 
-[dcrios](https://github.com/raedahgroup/dcrios): {}
+[dcrios](https://github.com/planetdecred/dcrios):
+
+- repository moved to the planetdecred organization
+- [Chinese](https://github.com/planetdecred/dcrios/pull/695) translation
+- various UI [fixes](https://github.com/planetdecred/dcrios/pull/694)
 
 [dcrdata](https://github.com/decred/dcrdata): {}
 
