--- a/journal/202006.md
+++ b/journal/202006.md
@@ -99,7 +99,7 @@ In progress:
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
-- { anything notable? }
+{ anything notable? }
 
 [dcrdex](https://github.com/decred/dcrdex):
 
@@ -143,17 +143,21 @@ Addressing concerns about the project timeline, @chappjc noted:
 - [Chinese](https://github.com/planetdecred/dcrios/pull/695) translation
 - various UI [fixes](https://github.com/planetdecred/dcrios/pull/694)
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata):
 
-[tinydecred](https://github.com/decred/tinydecred): {}
+{ anything notable? }
 
-[docs](https://github.com/decred/dcrdocs): {}
+[docs](https://github.com/decred/dcrdocs):
+
+- [LN Data Backup](https://docs.decred.org/lightning-network/backups/) page [added](https://github.com/decred/dcrdocs/pull/1106), a must-read for those testing Decred LN to prevent fund loss
+- [Contributing](https://docs.decred.org/contributing/overview/) page now lists a few personal [stories](https://github.com/decred/dcrdocs/pull/1101) of becoming a contractor
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
 Other:
 
-- {smaller items go here}
+- { @raedah shall we mention the new godcr? }
+- { @raedah anything to report on dcrextdata? }
 - https://macelai.github.io/decred-split-stakepools/ https://www.reddit.com/r/decred/comments/hc49ew/page_for_all_split_ticket_pools/ 
 
 Dev activity stats for June ({approximate?}): {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
