--- a/journal/202006.md
+++ b/journal/202006.md
@@ -79,7 +79,7 @@ In progress:
 - TOTP 2FA support
 - ability for CMS admins to review [spending](https://github.com/decred/politeiagui/pull/2032) of approved proposals
 
-The politeiad backend tlog implementation is complete { clarify }. Work on adding the plugins to it is ongoing. Plugin functionality includes comments, comment likes, and proposal votes. Next step will be to load the tlog implementation with existing mainnet data and run performance tests against it before launching. It's possible that some things might need to be reworked if any issues are discovered.
+The [tlog implementation](https://github.com/decred/politeia/pull/1180) in the base politeiad backend is complete. Work on adding the plugins to it is ongoing. Plugin functionality includes comments, comment likes, and proposal votes. Next step will be to load the tlog implementation with existing mainnet data and run performance tests against it before launching. It's possible that some things might need to be reworked if any issues are discovered.
 
 [vspd](https://github.com/decred/vspd):
 
