--- a/journal/202006.md
+++ b/journal/202006.md
@@ -92,7 +92,7 @@ The [tlog implementation](https://github.com/decred/politeia/pull/1180) in the b
 - [refreshed](https://github.com/decred/vspd/pull/138) UI look
 - multiple changes to improve input validation, error handling, shutdown, etc
 
-{ anything to add like status or nearest plans? }
+The core functionality is complete and developers are in the process of thoroughly testing and shaking out edge cases with mixed/unmixed tickets, with/without the auto-ticket buyer. vspd has been used to vote on tens of thousands of testnet tickets at this point.
 
 [dcrpool](https://github.com/decred/dcrpool):
 
@@ -452,5 +452,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, lukebp
+- reviews and feedback: davecgh, jholdstock, lukebp
 - title image: {}
