--- a/journal/202006.md
+++ b/journal/202006.md
@@ -140,6 +140,14 @@ Addressing concerns about the project timeline, @chappjc noted:
 - [Chinese](https://github.com/planetdecred/dcrios/pull/695) translation
 - various UI [fixes](https://github.com/planetdecred/dcrios/pull/694)
 
+[godcr](https://github.com/planetdecred/godcr):
+
+godcr is an emerging cross-platform desktop SPV wallet for Decred built with [Gio](https://gioui.org/), an immediate mode GUI toolkit written in Go. This makes the whole application built purely with Go with no web browser or javascript in it, and a much smaller dependency graph (and audit surface) - an important property for software that controls money. As of writing, the compiled binary is ~30 MB.
+
+The project started in Jan 2020 but before settling on Gio, since Sep 2018 the developers have built multiple GUI prototypes (terminal, in-browser, Nucular, Fyne) which are now archived in the [godcr-old](https://github.com/raedahgroup/godcr-old) repository.
+
+{ status, plans? }
+
 [dcrdata](https://github.com/decred/dcrdata):
 
 { anything notable? }
@@ -452,5 +460,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, jholdstock, lukebp
+- reviews and feedback: davecgh, jholdstock, lukebp, raedah
 - title image: {}
