Dev dcrd clarify

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -38,7 +38,7 @@ In progress:
 
 - [asynchronous](https://github.com/decred/dcrd/pull/2219) indexing
 
-The majority of the efforts in dcrd for June went into the decentralized Treasury work. The [pull request] is undergoing the review process and adding tests to ensure correctness, but it appears to be feature complete.
+The majority of the efforts in dcrd for June went into the decentralized Treasury work. The [pull request](https://github.com/decred/dcrd/pull/2170) is undergoing the review process and adding tests to ensure correctness, but it appears to be feature complete. Once it is finished, a [Decred Change Proposal](https://github.com/decred/dcps) will follow.
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
