--- a/journal/202006.md
+++ b/journal/202006.md
@@ -24,6 +24,20 @@ Congratulations to all contributors!
 
 Please check the full Reddit [announcement](https://www.reddit.com/r/decred/comments/hc5jut/decred_mobile_wallet_v150_has_been_released_for/) and support the [tweet](https://twitter.com/planetdecred/status/1274041667520090112).
 
+## Decred's Rosetta Middleware Implementation
+
+An [implementation](https://community.rosetta-api.org/t/decreds-rosetta-middleware-implementation/79) of the Rosetta API for Decred was [released](https://twitter.com/decredproject/status/1279127834137636866) on Jul 3.
+
+Rosetta was [released](https://twitter.com/coinbase/status/1273269255610531841) by Coinbase on Jun 17:
+
+> Coinbase initially developed Rosetta as the middleware used to integrate blockchains into its platform securely and painlessly (...)
+> 
+> For developers of new blockchain projects, the Rosetta interface makes it easier to ensure compatibility with exchanges that use Rosetta, and can dramatically speed up the time it takes exchanges to integrate with new blockchains and protect customer funds by ensuring specific security conditions are met.
+> 
+> For the broader community of crypto developers, Rosetta makes it easier to build cross-blockchain applications such as block explorers, wallets and dapps. Instead of writing custom parsing for every supported blockchain, applications can use a blockchain project's Rosetta implementation to read on-chain data and construct transactions in a standard format; minimizing code and simplifying maintenance.
+
+Rosetta features interesting design [principles](https://www.rosetta-api.org/docs/principles_introduction.html), [no gatekeepers](https://www.rosetta-api.org/docs/no_gatekeepers.html) policy, strict security requirements for [wallet](https://www.rosetta-api.org/docs/wallet_api_introduction.html) implementations, and [staking](https://www.rosetta-api.org/docs/staking_contract_support.html) support. The first released [SDK](https://www.rosetta-api.org/docs/rosetta_sdk_go.html) is for the Go language as it is heavily [used](https://github.com/coinbase/rosetta-specifications#user-content-sdks-in-more-languages) at Coinbase.
+
 ## Development
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
