--- a/journal/202006.md
+++ b/journal/202006.md
@@ -26,9 +26,7 @@ Please check the full Reddit [announcement](https://www.reddit.com/r/decred/comm
 
 ## Decred's Rosetta Middleware Implementation
 
-An [implementation](https://community.rosetta-api.org/t/decreds-rosetta-middleware-implementation/79) of the Rosetta API for Decred was [released](https://twitter.com/decredproject/status/1279127834137636866) on Jul 3.
-
-Rosetta was [released](https://twitter.com/coinbase/status/1273269255610531841) by Coinbase on Jun 17:
+An [implementation](https://community.rosetta-api.org/t/decreds-rosetta-middleware-implementation/79) of the Rosetta API for Decred was [released](https://twitter.com/decredproject/status/1279127834137636866) in early July, just 2 weeks after Rosetta itself was [released](https://twitter.com/coinbase/status/1273269255610531841) by Coinbase:
 
 > Coinbase initially developed Rosetta as the middleware used to integrate blockchains into its platform securely and painlessly (...)
 > 
