Dev godcr next steps

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -161,7 +161,7 @@ godcr is an emerging cross-platform desktop SPV wallet for Decred built with [Gi
 
 The project started in Jan 2020 but before settling on Gio, since Sep 2018 the developers have built multiple GUI prototypes (terminal, in-browser, Nucular, Fyne) which are now archived in the [godcr-old](https://github.com/raedahgroup/godcr-old) repository.
 
-{ status, plans? }
+Next steps are releasing a publicly available demo build with basic wallet functionality and integrating the new vspd staking.
 
 [dcrdata](https://github.com/decred/dcrdata):
 
